@@ -4,6 +4,7 @@ for more details, see http://svn.sourceforge.net/viewcvs.cgi/psycle/trunk/?view=
 
 	* reviewed numeric type sizes in psycle::host::Song::Save and prettified it
 	* old fileformat loaders: moved remaining code to psycle/host/legacy/old_file_format.cpp.
+	* vst: removed debug logging of made the effEditIdle opcode
 	
 2006-03-15 psycle 1.9.7 bohan
 
